# DirectSparseVO

./: CMakeLists.txt  README.md
config/: tum_fr1_rgbd.yaml
include/: BasicAlignment.h  Camera.h  Common.h  Config.h  Detector.h  Feature.h  Frame.h  MapPoint.h  Memory.h  NLLSSolver.h  NLLSSolverImpl.hpp  SparseAlignment.h  Tracker.h  Utils.h  robot_cost.h
src/: BasicAlignment.cpp  CMakeLists.txt  Config.cpp  Detector.cpp  Frame.cpp  Memory.cpp  SparseAlignment.cpp  Tracker.cpp  robust_cost.cpp
test/: CMakeLists.txt  basic_direct_vo.cpp  direct_sparse_mono.cpp  test_sparse_align_pair.cpp
